--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>IOMirea-run</title>
-	<link rel="stylesheet" type="text/css" href="src/css/Styleproject.css">
-	<link rel="stylesheet" type="text/css" href="src/css/StyleAce.css">
-	<link rel="stylesheet" type="text/css" href="src/css/Bookmark.css">
+	<link rel="stylesheet" type="text/css" href="src-iomirea/css/Styleproject.css">
+	<link rel="stylesheet" type="text/css" href="src-iomirea/css/StyleAce.css">
+	<link rel="stylesheet" type="text/css" href="src-iomirea/css/Bookmark.css">
 	<script src="jquery-3.4.1.min.js" type="text/javascript" charset="utf-8"></script>
 	<script src="src-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
-	<script src="src/js/show_info.js" type="text/javascript" charset="utf-8"></script>
-	<script src="src/js/run_code.js" type="text/javascript" charset="utf-8"></script>
-	<script src="src/js/languages_setup.js" type="text/javascript" charset="utf-8"></script>
+	<script src-iomirea="src/js/show_info.js" type="text/javascript" charset="utf-8"></script>
+	<script src-iomirea="src/js/run_code.js" type="text/javascript" charset="utf-8"></script>
+	<script src-iomirea="src/js/languages_setup.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
 	<header>
