--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 	<link rel="stylesheet" type="text/css" href="src-iomirea/css/Bookmark.css">
 	<script src="jquery-3.4.1.min.js" type="text/javascript" charset="utf-8"></script>
 	<script src="src-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
-	<script src-iomirea="src/js/show_info.js" type="text/javascript" charset="utf-8"></script>
-	<script src-iomirea="src/js/run_code.js" type="text/javascript" charset="utf-8"></script>
-	<script src-iomirea="src/js/languages_setup.js" type="text/javascript" charset="utf-8"></script>
+	<script src="src-iomirea/js/show_info.js" type="text/javascript" charset="utf-8"></script>
+	<script src="src-iomirea/js/run_code.js" type="text/javascript" charset="utf-8"></script>
+	<script src="src-iomirea/js/languages_setup.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
 	<header>
-		<span id=headlogo><img id=logo src="src/css/logo.png"></span>
+		<span id=headlogo><img id=logo src="src-iomirea/css/logo.png"></span>
 		<span class="bmbg first">
 			<div class="bm first">Iomirea compiler</div>
 		</span>
@@ -46,7 +46,7 @@
 		<br>
 		Our github <img src="" href=''>
 		<br>
-		Powered by Ace Editor <a href="https://ace.c9.io/" target="_blank"><img src="src/css/ace-logo.png" width="50">
+		Powered by Ace Editor <a href="https://ace.c9.io/" target="_blank"><img src="src-iomirea/css/ace-logo.png" width="50">
 	</div>
 
 	<script type="text/javascript">
